add quaternion file

--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_la2.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_la2.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_beam_290_3500
+out_folder = exp/TIMIT_LSTM_fbank_la2_290_3500
 seed = 3500
 use_cuda = True
 multi_gpu = False
@@ -15,70 +15,70 @@ n_epochs_tr = 24
 [dataset1]
 data_name = TIMIT_tr
 fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_beam/data/train/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_beam/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_beam/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+	fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/feats.scp
+	fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
 	cw_left=0
 	cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/train/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/train/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 5
 
 [dataset2]
 data_name = TIMIT_dev
 fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_beam/data/dev/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_beam/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_beam/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+	fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/feats.scp
+	fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
 	cw_left=0
 	cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_dev
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/dev/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_dev
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/dev/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
 [dataset3]
 data_name = TIMIT_test
 fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_beam/data/test/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_beam/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_beam/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+	fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/feats.scp
+	fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
 	cw_left=0
 	cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_test
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/test/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_test
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/test/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
 [data_use]
