--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_la4.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_la4.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/TIMIT_LSTM_fbank_la4
-seed = 2234
+out_folder = exp/TIMIT_LSTM_fbank_la4_290_3500
+seed = 3500
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -15,70 +15,70 @@ n_epochs_tr = 24
 [dataset1]
 data_name = TIMIT_tr
 fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_la4/data/train/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+	fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/train/feats.scp
+	fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
 	cw_left=0
 	cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_train
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/train/
-	lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/train/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_train
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/train/
-	lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/train/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 5
 
 [dataset2]
 data_name = TIMIT_dev
 fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_la4/data/dev/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+	fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/dev/feats.scp
+	fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
 	cw_left=0
 	cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_dev
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_dev
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/dev/
-	lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/dev/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_dev
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_dev
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/dev/
-	lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/dev/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
 [dataset3]
 data_name = TIMIT_test
 fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_la4/data/test/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+	fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/test/feats.scp
+	fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
 	cw_left=0
 	cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_test
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_test
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/test/
-	lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/test/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_test
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3_ali_test
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/test/
-	lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/test/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
 [data_use]
@@ -103,12 +103,12 @@ arch_class = LSTM
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-lstm_lay = 550,550,550,550
-lstm_drop = 0.2,0.2,0.2,0.2
+lstm_lay = 290,290,290,290
+lstm_drop = 0,0,0,0
 lstm_use_laynorm_inp = False
 lstm_use_batchnorm_inp = False
 lstm_use_laynorm = False,False,False,False
-lstm_use_batchnorm = True,True,True,True
+lstm_use_batchnorm = False,False,False,False
 lstm_bidir = True
 lstm_act = tanh,tanh,tanh,tanh
 lstm_orthinit = True
