--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_mfcc_beam.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_mfcc_beam.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_beam_290_4500
+out_folder = exp/TIMIT_LSTM_mfcc_beam_290_4500
 seed = 4500
 use_cuda = True
 multi_gpu = False
@@ -14,71 +14,71 @@ n_epochs_tr = 24
 
 [dataset1]
 data_name = TIMIT_tr
-fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_beam/data/train/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_beam/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_beam/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
-	cw_left=0
-	cw_right=0
+fea = fea_name=mfcc
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/train/feats_mfcc.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_beam/mfcc/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        cw_left=0
+        cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3_ali
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/train/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3_ali
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/train/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3/graph
 n_chunks = 5
 
 [dataset2]
 data_name = TIMIT_dev
-fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_beam/data/dev/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_beam/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_beam/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
-	cw_left=0
-	cw_right=0
+fea = fea_name=mfcc
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/dev/feats_mfcc.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_beam/mfcc/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        cw_left=0
+        cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3_ali_dev
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/dev/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3_ali_dev
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/dev/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3/graph
 n_chunks = 1
 
 [dataset3]
 data_name = TIMIT_test
-fea = fea_name=fbank
-	fea_lst=/opt/kaldi/egs/timit/s5_beam/data/test/feats.scp
-	fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_beam/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_beam/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
-	cw_left=0
-	cw_right=0
+fea = fea_name=mfcc
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/test/feats_mfcc.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_beam/mfcc/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        cw_left=0
+        cw_right=0
 	
 lab = lab_name=lab_cd
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3_ali_test
 	lab_opts=ali-to-pdf
 	lab_count_file=auto
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/test/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3/graph
 	
 	lab_name=lab_mono
-	lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
+	lab_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3_ali_test
 	lab_opts=ali-to-phones --per-frame=true
 	lab_count_file=none
-	lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
-	lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
+	lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/data/test/
+	lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5_beam/exp/tri3/graph
 n_chunks = 1
 
 [data_use]
@@ -174,7 +174,7 @@ opt_weight_decay = 0.0
 
 [model]
 model_proto = proto/model.proto
-model = out_dnn1=compute(LSTM_cudnn_layers,fbank)
+model = out_dnn1=compute(LSTM_cudnn_layers,mfcc)
 	out_dnn2=compute(MLP_layers,out_dnn1)
 	out_dnn3=compute(MLP_layers2,out_dnn1)
 	loss_mono=cost_nll(out_dnn3,lab_mono)
@@ -205,4 +205,3 @@ skip_scoring = false
 scoring_script = local/score.sh
 scoring_opts = "--min-lmwt 1 --max-lmwt 10"
 norm_vars = False
-
