--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRU_mfcc_combine4.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRU_mfcc_combine4.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/QLSTM_singlecopy_la2
+out_folder = exp/TIMIT_liGRU_mfcc_combine4
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -21,20 +21,20 @@ fea = fea_name=la2
         cw_right=0
 
         fea_name=la3
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la3/data/train/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la3/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la3/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la4
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/train/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la5
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la5/data/train/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la5/data/train/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la5/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -52,6 +52,7 @@ lab = lab_name=lab_cd
         lab_data_folder=/nfs-share/xinchi/kaldi/egs/timit/s5/data/train/
         lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 5
+
 [dataset2]
 data_name = TIMIT_dev
 fea = fea_name=la2
@@ -61,20 +62,20 @@ fea = fea_name=la2
         cw_right=0
 
         fea_name=la3
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la3/data/dev/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la3/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la3/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la4
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/dev/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la5
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la5/data/dev/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la5/data/dev/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la5/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -102,20 +103,20 @@ fea = fea_name=la2
         cw_right=0
 
         fea_name=la3
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la3/data/test/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la3/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la4
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/test/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la4/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la5
-        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/nfs-share/xinchi/kaldi/egs/timit/s5_la5/data/test/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la5/data/test/utt2spk  ark:/nfs-share/xinchi/kaldi/egs/timit/s5_la5/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -134,7 +135,6 @@ lab = lab_name=lab_cd
         lab_graph=/nfs-share/xinchi/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
-
 [data_use]
 train_with = TIMIT_tr
 valid_with = TIMIT_dev
@@ -150,25 +150,20 @@ batch_size_valid = 8
 max_seq_length_valid = 500
 
 [architecture1]
-arch_name = QLSTM
-arch_proto = proto/QLSTM.proto
-arch_library = q_neural_networks
-arch_class = QLSTM
+arch_name = liGRU_layers
+arch_proto = proto/liGRU_fusion.proto
+arch_library = neural_networks
+arch_class = liGRU_jit
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-lstm_lay = 512,512,512,512
-lstm_drop = 0.2,0.2,0.2,0.2
-lstm_bidir = True
-lstm_act = tanh,tanh,tanh,tanh
-quaternion_init=quaternion
-autograd=False
-proj_layer=False
-proj_dim=0
-proj_norm=False
-proj_act=0
-quaternion_norm=False
-arch_lr = 0.0016
+ligru_lay = 512,512,512,512
+ligru_drop = 0.2,0.2,0.2,0.2
+ligru_bidir = True
+ligru_act = relu,relu,relu,relu
+ligru_fusion_type= 0
+ligru_fusion_layer_size= 2048
+arch_lr = 0.0004
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -179,7 +174,7 @@ opt_centered = False
 opt_weight_decay = 0.0
 
 [architecture2]
-arch_name = MLP_layers
+arch_name = MLP_layers2
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -204,7 +199,7 @@ opt_centered = False
 opt_weight_decay = 0.0
 
 [architecture3]
-arch_name = MLP_layers2
+arch_name = MLP_layers3
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -233,17 +228,17 @@ model_proto = proto/model.proto
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(QLSTM,conc3)
-	out_dnn2=compute(MLP_layers,out_dnn1)
-	out_dnn3=compute(MLP_layers2,out_dnn1)
-	loss_mono=cost_nll(out_dnn3,lab_mono)
+	out_dnn2=compute(liGRU_layers,conc3)
+	out_dnn3=compute(MLP_layers2,out_dnn2)
+	out_dnn4=compute(MLP_layers3,out_dnn2)
+	loss_mono=cost_nll(out_dnn4,lab_mono)
 	loss_mono_w=mult_constant(loss_mono,1.0)
-	loss_cd=cost_nll(out_dnn2,lab_cd)
+	loss_cd=cost_nll(out_dnn3,lab_cd)
 	loss_final=sum(loss_cd,loss_mono_w)
-	err_final=cost_err(out_dnn2,lab_cd)
+	err_final=cost_err(out_dnn3,lab_cd)
 
 [forward]
-forward_out = out_dnn2
+forward_out = out_dnn3
 normalize_posteriors = True
 normalize_with_counts_from = lab_cd
 save_out_file = False
@@ -264,3 +259,4 @@ skip_scoring = false
 scoring_script = local/score.sh
 scoring_opts = "--min-lmwt 1 --max-lmwt 10"
 norm_vars = False
+
