--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_mfcc_singlecopy_try.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_mfcc_singlecopy_try.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/QLSTM_mfcc_singlecopy
+out_folder = exp/try_can_be_delete
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -152,7 +152,7 @@ max_seq_length_valid = 500
 [architecture1]
 arch_name = QLSTM
 arch_proto = proto/QLSTM.proto
-arch_library = q_neural_networks
+arch_library = quaternion_neural_networks
 arch_class = QLSTM
 arch_pretrain_file = none
 arch_freeze = False
